gateway-zecore/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-zecore
    service: gateway-zecore
  name: gateway-zecore
  namespace: client-gateway
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: gateway-zecore
  type: ClusterIP
